# Assistente_Pessoal

./: .gitignore  README.md  main.py  pyproject.toml
assets/: memory.json
model/: servo.Modelfile
src/: __init__.py  memory.json  memory.py  servo.py  stt.py  tts.py
