[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "assistente-pessoal"
version = "0.1.0"
description = "Estou criando meu assistente pessoal"
authors = ["Gregorio Honorato <gregorio.honorato@azos.com.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ollama = ">=0.6.1,<0.7.0"
edge-tts = "^7.2.7"
pygame = "^2.6.1"
speechrecognition = "^3.14.5"
pyaudio = "^0.2.14"
logperformance = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.12.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "9.5"

[tool.pylint.format]
max-line-length = "120"
[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.commitizen]
version = "^2.32.5"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
  "commitizen/__version__.py",
  ".pre-commit-config.yaml:rev:.+Commitizen"
]

[tool.poetry.scripts]
lint = "flake8"
format = "black . && isort ."
